--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,28 @@ body, h1,h2,h3,h4,h5,h6 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('/w3images/profile_girl.jpg');
     min-height: 100%;
 }
+
+.w3-theme-l5 {color:#000 !important; background-color:#ebf7fd !important}
+.w3-theme-l4 {color:#000 !important; background-color:#bbe5f7 !important}
+.w3-theme-l3 {color:#000 !important; background-color:#77ccf0 !important}
+.w3-theme-l2 {color:#fff !important; background-color:#33b2e8 !important}
+.w3-theme-l1 {color:#fff !important; background-color:#1589bb !important}
+.w3-theme-d1 {color:#fff !important; background-color:#0c4f6b !important}
+.w3-theme-d2 {color:#fff !important; background-color:#0b465f !important}
+.w3-theme-d3 {color:#fff !important; background-color:#093d54 !important}
+.w3-theme-d4 {color:#fff !important; background-color:#083548 !important}
+.w3-theme-d5 {color:#fff !important; background-color:#072c3c !important}
+
+.w3-theme-light {color:#000 !important; background-color:#ebf7fd !important}
+.w3-theme-dark {color:#fff !important; background-color:#072c3c !important}
+.w3-theme-action {color:#fff !important; background-color:#072c3c !important}
+
+.w3-theme {color:#fff !important; background-color:#0d5877 !important}
+.w3-text-theme {color:#0d5877 !important}
+.w3-border-theme {border-color:#0d5877 !important}
+
+.w3-hover-theme:hover {color:#fff !important; background-color:#0d5877 !important}
+.w3-hover-text-theme:hover {color:#0d5877 !important}
+.w3-hover-border-theme:hover {border-color:#0d5877 !important}
